# neoconv

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: manual-release-with-binaries.yml  manual-release.yml  manual-test.yml
neoconv/: __init__.py  cli.py  core.py  gui.py
neoconv/core/: __init__.py  constants.py  extract.py  interleave.py  mame_parse.py  models.py  neo_format.py  pack.py  swap_detect.py  verify.py
tests/: test_cli.py  test_core.py  test_gui_logic.py
